v1.6.1-fix - wrong background.

--- a/resource.css
+++ b/resource.css
@@ -322,6 +322,7 @@ box-shadow: 0px 0px var(--glow-blur) var(--glow-radius) var(--glow-colour);
 }
 .modal {
     --bs-modal-zindex: 200;
+    --bs-modal-bg: var(--bs-tertiary-bg);
     animation-duration: 0.5s;
     animation-name: modalSlide;
     animation-iteration-count: 1;
@@ -329,8 +330,7 @@ box-shadow: 0px 0px var(--glow-blur) var(--glow-radius) var(--glow-colour);
     animation-timing-function: cubic-bezier(0.64, 0, 0.78, 0);
     transition: transform 0.2s cubic-bezier(0.16, 1, 0.3, 1);
     backdrop-filter: blur(var(--backdrop-blur-radius));
-    background-color: var(--bs-tertiary-bg);
-}
+    
 .card:hover {
     border-color: var(--bs-primary);
     box-shadow: 0px 0px var(--glow-blur) var(--glow-radius) var(--glow-colour);
